easy cleanups in Sched